# var-market-risk-dashboard

./: .gitignore  EXTENSIONS.md  README.md
.github/workflows/: ci-cd.yml
backend/: Dockerfile  README.md  requirements.txt
backend/app/: main.py  models.py  var_engine.py
backend/tests/: test_portfolio_var.py  test_var_engine.py
frontend/: README.md  index.html  package-lock.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: BacktestChart.tsx  DataSourcePanel.tsx  MonteCarloPathsChart.tsx  ReturnDistributionChart.tsx  VarComparisonChart.tsx  VarSummaryCards.tsx  VarSurfaceTable.tsx
frontend/src/types/: var.ts
infra/: backend.tf  frontend.tf  main.tf  outputs.tf  variables.tf
infra/bootstrap/: main.tf  outputs.tf  variables.tf
reference/: README.md
reference/cpp/: CMakeLists.txt  README.md  test_var.cpp  var.cpp  var.hpp
reference/fixtures/: expected_historical.csv  expected_monte_carlo.csv  expected_parametric.csv  sample_returns.csv
reference/matlab/: README.md  test_var.m  var_historical.m  var_monte_carlo.m  var_parametric.m
reference/python/: README.md  example.py  test_var.py  var.py
reference/r/: README.md  test_var.R  var.R
reference/sas/: README.md  test_var.sas  var.sas
